# agents-of-inference

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  backup.yml  pyproject.toml  run.sh
.github/workflows/: release-please.yml
agents_of_inference/: main.py  prompts.yml  sample_graph.py  type_defs.py  utils.py
agents_of_inference/comfyui/: faceid.py  sd_trt.py  svd_trt.py  utils.py
chattts/: README.md  client.py  requirements.txt  seeds.yml  server.py  test_chattts.py
contest/video/: agents_of_inference.py
crosstalk/: main.py  prompts.yml  type_defs.py
documentary/: main.py  prompts.yml  type_defs.py
k8s/: README.md
k8s/comfyui/: deployment.yml  pvc.yml  service.yml  storage.yml
k8s/llm/: deployment.yml  hf-secret.yml  pvc.yml  service.yml  storage.yml
musicgen/: README.md  client.py  musicgen.py  requirements.txt  server.py  test_musicgen.py
musicgen/samples/: .gitignore
output/1717451929/: state.yml
output/1717452950/: state.yml
output/1717521916/: state.yml
output/1717523383/: state.yml
output/1717524686/: state.yml
output/1717644836/: state.yml
output/1717684423/: state.yml
output/1717687620/: state.yml
output/1717696996/: state.yml
output/1717708238/: state.yml
output/1717733700/: state.yml
output/1717760564/: state.yml
output/1717783342/: state.yml
output/1717807793/: state.yml
output/1717845488/: state.yml
output/1717867954/: state.yml
output/1717897825/: state.yml
svd/: .gitignore  README.md  main.py  requirements.txt  test.py
tests/: test_comfyui.py
utils/: main.py  moviepy.py
(+130 files in other folders)
